# docking_automation

./: .clinerules  .gitignore  README.md  README.txt  auto_docking.py  autodock.conf  ccou.py  check.py  combine.py  combine_taiou.py  convert_sdf_to_pdb.py  count.py  countpdbqt.py  devide_sdf.py  dock_P0.py  docking_automation_design_improvements.md  eBox.pl  equal_multi.py  henkan.py  idou.py  make_pro_conf.py  make_v_num.py  multi_top_N_sdf.py  mypy.ini  pdbqtcount.py  pre_auto_docking.py  pre_devide.py  pre_shell_sbatch.sh  pre_slurm.sh  prepare_protein.py  receptor_N_count.py  run_aldr_docking.py  run_docking.py  settings.ini  setup.py  shell_sbatch.sh  slurm.sh  sort_pdbqt.py  timecount.py  top_N_pull.py  (+1 more)
.devcontainer/: Dockerfile  (+1 more)
docking_automation/: __init__.py  config.ini  pyproject.toml  setup.py
docking_automation/application/services/: result_analysis_service.py
docking_automation/application/workflows/: batch_docking_workflow.py  simple_docking_workflow.py
docking_automation/converters/: __init__.py  molecule_converter.py
docking_automation/docking/: __init__.py  autodockvina_docking.py  docking.py  docking_parameters.py  docking_result.py  docking_result_collection.py  docking_result_events.py  fpocket_grid_box_predictor.py  grid_box.py  preprocessed_compound_set.py  preprocessed_protein.py  restretto_docking.py
docking_automation/docking/entity/: __init__.py  ligand.py
docking_automation/docking/service/: __init__.py
docking_automation/docking/value_object/: __init__.py  docking_parameters.py  parameter_type.py
docking_automation/domain/: domain_event.py  domain_event_publisher.py
docking_automation/domain/services/: __init__.py  docking_result_export_service.py  protein_segmentation_service.py
docking_automation/domain_old/: __init__.py
docking_automation/molecule/: __init__.py  compound_set.py  compound_set_events.py  protein.py  protein_events.py
docking_automation/tests/: tdd_plan.md
old/docking_automation/: __init__.py  mypy.ini  pyproject.toml
(+178 files in other folders)
