[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "docking_automation"
version = "0.1.0"
description = "A domain-driven design approach to protein-compound docking automation"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.0"
pandas = "^1.4.0"
rdkit = "^2022.3.1"
sqlalchemy = "^1.4.0"
pydantic = "^1.9.0"
typer = "^0.6.0"
dask = "^2022.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
mypy = "^0.960"
flake8 = "^4.0.0"
black = "^22.3.0"
sphinx = "^5.0.0"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]