[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

# 以下のモジュールはエラーを無視する
[[tool.mypy.overrides]]
module = [
    "docking_automation.infrastructure.*",
    "docking_automation.tests.*",
    "docking_automation.presentation.*"
]
ignore_errors = true

# 外部ライブラリの型情報がないエラーを無視
[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "pandas.*",
    "numpy.*",
    "meeko.*"
]
ignore_missing_imports = true